# src/SFA.DAS.DigitalCertificates.Api/swagger.json
@@ -1143,17 +1143,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserActionDetail"
+                  "$ref": "#/components/schemas/GetUserActionByCodeQueryResult"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserActionDetail"
+                  "$ref": "#/components/schemas/GetUserActionByCodeQueryResult"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserActionDetail"
+                  "$ref": "#/components/schemas/GetUserActionByCodeQueryResult"
                 }
               }
             }
@@ -1833,6 +1833,70 @@
         "properties": {
           "sharingDetails": {
             "$ref": "#/components/schemas/CertificateSharings"
+          }
+        },
+        "additionalProperties": false
+      },
+      "GetUserActionByCodeQueryResult": {
+        "required": [
+          "familyName",
+          "givenNames"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "userId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "actionType": {
+            "$ref": "#/components/schemas/ActionType"
+          },
+          "actionTime": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "actionStatus": {
+            "$ref": "#/components/schemas/UserActionStatus"
+          },
+          "familyName": {
+            "type": "string",
+            "nullable": true
+          },
+          "givenNames": {
+            "type": "string",
+            "nullable": true
+          },
+          "certificateId": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
+          },
+          "certificateType": {
+            "$ref": "#/components/schemas/CertificateType"
+          },
+          "courseName": {
+            "type": "string",
+            "nullable": true
+          },
+          "actionCode": {
+            "type": "string",
+            "nullable": true
+          },
+          "adminActions": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AdminActionDetail"
+            },
+            "nullable": true
+          },
+          "uln": {
+            "type": "integer",
+            "format": "int64",
+            "nullable": true
           }
         },
         "additionalProperties": false
